Fix action list misalignment

--- a/dev/styles/partials/_actionList.scss
+++ b/dev/styles/partials/_actionList.scss
@@ -3,8 +3,8 @@
 .action-list {
     display: flex;
     flex-flow: row wrap;
-    margin-left: $base-spacing * -1;
-    margin-right: $base-spacing * -1;
+    margin-left: $base-spacing/2 * -1;
+    margin-right: $base-spacing/2 * -1;
 
     @media (max-width: 480px) {
         flex-flow: column nowrap;
